[project]
name = "nanogpt"
version = "0.1.0"
description = "The simplest, fastest repository for training/fine-tuning medium-sized GPTs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets<=3.6.0",
  "numpy",
  "tiktoken",
  "torch",
  "tqdm",
  "transformers",
  "wandb",
]
